2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* TODO: removed mustek_pp entry (Check that global variables are 
	  initialized propperly

2003-04-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* lib/Makefile.in: Recompile all targets if necessary.
	* sanei/sanei_scsi.c: Fixed some warnings.
	* include/md5.h: Declare md5_buffer.
	* sanei/sanei_constrain_value.c: Removed unnecessary variable.
	* backend/agfafocus.c: Fixed some warnings.
	* backend/as6e.c: Fixed some warnings.
	* backend/coolscan.c backend/coolscan-scsi.h: Fixed a bunch of
	  compilation warnings.
	* backend/djpeg.c: Fixed some warnings. 
	* backend/dmc.c: Fixed some warnings. 

2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp.c: Fixed a potential crash bug that could be
          triggered when calling sane_init/sane_get_devices/sane_exit 
          multiple times, and fixed some minor bugs to pass the 
          frontend/tstbackend.c tests.

2003-04-03  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan.h backend/snapscan-scsi.c
	  backend/snapscan-options.c backend/snapscan.conf
	  doc/descriptions/snapscan.desc:
	  SnapScan backend 1.4.25 - added support for Epson Perfection 660,
	  enhanced support for Acer 5000

2003-04-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-as6e.man: Added info about $PATH. Minor formatting fixes.
	* doc/sane.man: Reorganization. Updated DEVELOPER'S DOCUMENTATION.
	  Rewrote PROBLEMS in a more user-centric way. Added "HOW CAN YOU
	  HELP" section. Added paragraph about SANE device lists. Updated
	  CONTACT section. Minor additions to the gt68xx and plustek
	  entries. Minor spelling fixes.
	* backend/sm3600-color.c backend/sm3600-gray.c backend/sm3600-homerun.c
	  backend/sm3600-scanmtek.c backend/sm3600-scantool.h backend/sm3600-scanusb.c
	  backend/sm3600-scanutil.c backend/sm3600.c backend/sm3600.h: